--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -58,7 +58,7 @@
 		</p>
 		<p>
                   <strong>Urša Barič</strong><br>
-                  Elektronska pošta: <br>ajda.skrbinsek@guest.arnes.si
+                  Elektronska pošta: ursa.baric@gmail.com<br>
                   Govorilne ure za učence: petek, 4. ura<br>
                   Predmeti: Likovna umetnost,podaljšano bivanje, varstvo učencev.
 		</p>
