--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -108,6 +108,13 @@
                   Dopoldanska govorilna ura: četrtek, 6. ura<br>
                   Predmeti: Naravoslovje (6. in 7.r) 
 		</p>
+
+		<p>
+                  <strong>Tina Črnkovič</strong><br>
+                  Elektronska pošta: haber.tina@gmail.com<br>
+                  Dopoldanska govorilna ura: Sreda, 1. ura<br>
+                  Predmeti: Jutranje varstvo, varstvo učencev, pomočnica učiteljice v 1. in 2. razredu<br>
+		</p>
 								
 		<p>
                   <strong>Andrej Žagar</strong><br>
