--- a/Logika.html
+++ b/Logika.html
@@ -33,8 +33,8 @@
 									<h2>Tekmovanje iz znanja LOGIKE v šolskem letu 2022/2023</h2>
 								</header>
                 <p>
-	  Tudi v letošjem šolskem letu bomo na naši šoli sodelovali v znanju iz logike. Šolsko tekmovanje bo potekalo v četrtek, 29. septembra 2022.<br>
-    Učenci, ki se bodo letošnjega šolskega tekmovanje udeležili, bodo o tem pravočasno obveščeni. Regijsko tekmovanje za učence 8. in 9. razreda ter državno tekmovanje za 7. razred bo potekalo 22. oktobra 2022.<br>
+	  Tudi v letošjem šolskem letu bomo na naši šoli sodelovali v znanju iz logike. Šolsko tekmovanje bo potekalo v četrtek, 28. septembra 2023.<br>
+    Učenci, ki se bodo letošnjega šolskega tekmovanje udeležili, bodo o tem pravočasno obveščeni. Regijsko tekmovanje za učence 8. in 9. razreda ter državno tekmovanje za 7. razred bo potekalo 11. novembra 2023.<br>
     Za vse podrobne in dodatne informacije se lahko obrnete na svojega razrednika.
 	  
                 </p>
