--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -44,6 +44,16 @@
                 Dopoldanska govorilna ura: torek, 3. ura<br>
                 Predmeti: Športna vzgoja, Obvezni izbirni predmet Šport, podaljšano bivanje.
                 </p>
+								
+		<p>
+                <strong>Mateja Podlesnik</strong><br>
+                Elektronska pošta: mateja.podlesnik@osfara.si<br>
+                Dopoldanska govorilna ura: torek, 3. ura<br>
+                Predmeti: Angleški jezik, dodatni in dopolnilni pouk, individualna in skupinska pomoč Angleščina.
+                </p>
+
+
+								
 		<p>
                   <strong>Mitja Letig</strong><br>
                   Elektronska pošta: mitja.letig@guest.arnes.si<br>
