--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -58,7 +58,7 @@
                   <strong>Mitja Letig</strong><br>
                   Elektronska pošta: mitja.letig@guest.arnes.si<br>
                   Dopoldanska govorilna ura: četrtek, 3. ura<br>
-                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški pevski zbor, Obvezni izbirni predmet Glasbeni projekt.
+                  Predmeti: Glasbena umetnost 6.,7.,8 in 9. razred, Otroški in mladinski pevski zbor, Obvezni izbirni predmet Glasbeni projekt.
 		</p>
 		<p>
                   <strong>Alenka Čop</strong><br>
@@ -68,7 +68,7 @@
 		</p>
 		<p>
                   <strong>Urša Barič</strong><br>
-                  Elektronska pošta: ursa.baric@gmail.com<br>
+                  Elektronska pošta: ursa.baric@osfara.si<br>
                   Govorilne ure za učence: petek, 4. ura<br>
                   Predmeti: Likovna umetnost,podaljšano bivanje, varstvo učencev.
 		</p>
@@ -114,14 +114,14 @@
 
 		<p>
                   <strong>Miha Krkovič</strong><br>
-                  Elektronska pošta: miha.krkovic@yahoo.com<br>
+                  Elektronska pošta: miha.krkovic@osfara.si<br>
                   Dopoldanska govorilna ura: četrtek, 6. ura<br>
                   Predmeti: Naravoslovje (6. in 7.r) 
 		</p>
 
 		<p>
                   <strong>Tina Črnkovič</strong><br>
-                  Elektronska pošta: haber.tina@gmail.com<br>
+                  Elektronska pošta: tina.crnkovic@osfara.si<br>
                   Dopoldanska govorilna ura: Sreda, 1. ura<br>
                   Predmeti: Jutranje varstvo, varstvo učencev, pomočnica učiteljice v 1. in 2. razredu<br>
 		</p>
