--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -36,13 +36,21 @@
                   <strong>Uroš Obranovič</strong><br>
                   Elektronska pošta: uros.obranovic@osfara.si<br>
                   Dopoldanska govorilna ura: torek, 5. ura<br>
-                  Predmeti: Fizika, Matematika 6.-9. razreda, NIP računalništvo (4. do 6. r), varstvo učencev.
+                  Predmeti: Fizika, Matematika 6.-9. razreda, Izbirna predmeta Vzgoja za medije ter Urejanje besedil, varstvo učencev.
                 </p>
+
+ <p>
+                  <strong>Anja Kranjc</strong><br>
+                  Elektronska pošta: anja.kranjc@osfara.si<br>
+                  Dopoldanska govorilna ura: torek, 5. ura<br>
+                  Predmeti: Psihologinja, dodatna in skupinska strokovna pomoč, varstvo učencev.
+
+		 </p>						
                 <p>
                 <strong>Tadej Špoljar</strong><br>
                 Elektronska pošta: tadej.spoljar@gmail.com<br>
                 Dopoldanska govorilna ura: torek, 3. ura<br>
-                Predmeti: Športna vzgoja, Obvezni izbirni predmet Šport, podaljšano bivanje.
+                Predmeti: Športna vzgoja, Obvezni izbirni predmet Izbrani šport - Odbojka, podaljšano bivanje.
                 </p>
 								
 		<p>
@@ -76,7 +84,7 @@
                   <strong>Mateja Oberstar</strong><br>
                   Elektronska pošta: mateja.oberstar@os-stari-trg-ok.si<br>
                   Dopoldanska govorilna ura: petek, 4. ura<br>
-                  Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja, podaljšano bivanje.
+                  Predmeti: Geografija, Zgodovina, državljanska in domovinska vzgoja, razredničarka 6.,7. razreda.
 		</p>
 		<p>
                   <strong>Geraldine Frbežar</strong><br>
@@ -84,12 +92,7 @@
                   Dopoldanska govorilna ura: sreda, 5. ura<br>
                   Predmeti: Slovenščina 5., 6., 7., 8. in 9. razred, dramsko recitatorski krožek, knjižničarka.
 		</p>
-		<p>
-                  <strong>Anđela Krsnik</strong><br>
-                  Elektronska pošta: andela.krsnik@osfara.si<br>
-                  Dopoldanska govorilna ura: četrtek, 4. ura<br>
-                  Predmeti: šolska svetovalna delavka, dodatna strokovna pomoč učencem, vodja vrtca.
-                </p>
+		
 		
 		<p>
                   <strong>Tina Južnič</strong><br>
@@ -130,7 +133,7 @@
                   <strong>Andrej Žagar</strong><br>
                   Elektronska pošta: andrej.zagar@osfara.si<br>
                   Dopoldanska govorilna ura: ponedeljek, 3. ura<br>
-                  Predmeti: Varstvo učencev, tajnik<br>
+                  Predmeti: Varstvo učencev, tajnik, vodja vrtca Fara.<br>
 		</p>
 							</article>
 
