--- a/InformacijeVrtec.html
+++ b/InformacijeVrtec.html
@@ -33,7 +33,7 @@
 									<h2>Govorilne ure v Vrtcu Fara</h2>
 								</header>
                 <p>
-					Govorilne ure bodo v četrtek, 10. januarja 2019 med <strong>15.30 in 17.00 </strong>uro oziroma po predhodnem dogovoru s starši.<br><br>
+					Govorilne ure v šolskem letu 2024/2025 bodo potekale tako kot prejšnje šolsko leto ali pa po predhodnem dogovoru s starši.<br><br>
                 </p>
                
 							</article>
