--- a/predmeti.html
+++ b/predmeti.html
@@ -33,7 +33,7 @@
 									<h2>Tekoče informacije v šolskem letu 2022/2023</h2>
 								</header>
                 <p>
-	  Zadnja posodobitev - 25. oktober 2023. Trenutno ni posebnih informacij in obvestil pri predmetih.<br>
+	  Zadnja posodobitev - 18. november 2025. Trenutno ni posebnih informacij in obvestil pri predmetih.<br>
 	  
                 </p>
                
