--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -23,7 +23,7 @@
 				</section>
 
 			<!-- Main -->
-				<li><a href="/docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a></li>
+				<a href="/docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a>
 
 			<!-- Footer -->
 				<section id="footer">
