--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -23,8 +23,9 @@
 				</section>
 
 			<!-- Main -->
+			<section id="main">
 				<a href="../docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a>
-
+			</section>
 			<!-- Footer -->
 				<section id="footer">
 				</section>
