--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -24,7 +24,7 @@
 
 			<!-- Main -->
 			<section id="main">
-				<a href="../docs/ZAPOSLENI2425.pdf" target="_blank">Zaposleni na Oš Fara 2024 - 2025</a>
+				<a href="../docs/ZAPOSLENI2425.pdf">Zaposleni na Oš Fara 2024 - 2025</a>
 			</section>
 			<!-- Footer -->
 				<section id="footer">
