--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -23,9 +23,11 @@
 				</section>
 
 			<!-- Main -->
-			<section id="main">
-				<a href="../docs/ZAPOSLENI2425.pdf">Zaposleni na Oš Fara 2024 - 2025</a>
-			</section>
+			<div class="iframe-container">
+        <iframe src="../docs/ZAPOSLENI2425.pdf" frameborder="0">
+            <p>Your browser does not support iframes. <a href="../docs/ZAPOSLENI2425.pdf">View the PDF here.</a></p>
+        </iframe>
+    </div>
 			<!-- Footer -->
 				<section id="footer">
 				</section>
