--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -23,11 +23,16 @@
 				</section>
 
 			<!-- Main -->
-			<div class="iframe-container">
-        <iframe src="../docs/ZAPOSLENI2425.pdf" frameborder="0">
-            <p>Your browser does not support iframes. <a href="../docs/ZAPOSLENI2425.pdf">View the PDF here.</a></p>
-        </iframe>
-    </div>
+			<section id="main">
+					<div class="container">
+
+						<!-- Content -->
+							<article class="box post">
+								<h3>Vse informacije o zaposlenih dobite na <a hfref= "../docs/ZAPOSLENI2425.pdf" target = "_blank">povezavi.</a></h3>               
+							</article>
+
+					</div>
+				</section>
 			<!-- Footer -->
 				<section id="footer">
 				</section>
