--- a/Zaposleni.html
+++ b/Zaposleni.html
@@ -28,7 +28,7 @@
 
 						<!-- Content -->
 							<article class="box post">
-								<h3>Vse informacije o zaposlenih dobite, če kliknete <a href= "../docs/ZAPOSLENI2425.pdf" target = "_blank">TUKAJ.</a></h3>               
+								<h3>Vse informacije o zaposlenih v šolskem letu 2024/2025 dobite, če kliknete <a href= "../docs/ZAPOSLENI2425.pdf" target = "_blank">TUKAJ.</a></h3>               
 							</article>
 
 					</div>
