--- a/SolskaSvetovalnaSluzba.html
+++ b/SolskaSvetovalnaSluzba.html
@@ -33,12 +33,12 @@
 									<h2>Šolska svetovalna služba</h2>
 								</header>
                 <p>
-                  <strong>Anja Kranjc</strong><br>
-					Šolska svetovalna delavka Anđela Krsnik je zaposlena v OŠ in Vrtcu Fara.<br>
+                  <strong>Anja Krajnc</strong><br>
+					
 					Govorilne ure: Po dogovoru.<br>
 					Kontakt:<br>
 					Tel. št.: <strong>05 9931 425</strong><br>
-					E-pošta: <strong>anja.kranjc@osfara.si</strong><br> 
+					E-pošta: <strong>anja.krajnc@osfara.si</strong><br> 
 
          
                 </p>
