--- a/predmeti.html
+++ b/predmeti.html
@@ -33,7 +33,7 @@
 									<h2>Tekoče informacije v šolskem letu 2024/2025</h2>
 								</header>
                 <p>
-	  Zadnja posodobitev - 28. marec 2025. Trenutno ni posebnih informacij in obvestil pri predmetih.<br>
+	  Zadnja posodobitev - 6. maj 2025. Trenutno ni posebnih informacij in obvestil pri predmetih.<br>
 	  
                 </p>
                
