--- a/predmeti.html
+++ b/predmeti.html
@@ -30,10 +30,10 @@
 							<article class="box post">
 								<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 								<header>
-									<h2>Tekoče informacije v šolskem letu 2024/2025</h2>
+									<h2>Tekoče informacije v šolskem letu 2025/2026</h2>
 								</header>
                 <p>
-	  Zadnja posodobitev - 10. oktober 2025. Trenutno ni posebnih informacij in obvestil pri predmetih. Ko bodo, boste o tem obveščeni tudi po e-Asistentu.<br>
+	  Zadnja posodobitev - 18. december 2025. Trenutno ni posebnih informacij in obvestil pri predmetih. Ko bodo, boste o tem obveščeni tudi po e-Asistentu.<br>
 	  
                 </p>
                
